# InventoryManagementBackend

./: .gitignore  CMakeCache.txt  CMakeLists.txt
include/auth/: AuthenticationService.h
include/database/: db_manager.h
include/models/: Category.h  Customer.h  Employee.h  EmployeeRoles.h  Permissions.h  PermissionsRoles.h  Product.h  PurchaseOrder.h  PurchaseOrderDetails.h  Roles.h  Sale.h  Supplier.h  Transaction.h
include/routes/: AuthenticationServiceRoutes.h  CategoryRoutes.h  CustomerRoutes.h  EmployeeRolesRoutes.h  EmployeeRoutes.h  ProductRoutes.h  PurchaseOrderDetailsRoutes.h  PurchaseOrderRoutes.h  SaleRoutes.h  SupplierRoutes.h  TransactionRoutes.h
include/validation/: Validator.h
src/: main.cpp
src/auth/: AuthenticationService.cpp
src/database/: DB_Manager.cpp
src/models/: Category.cpp  Customer.cpp  Employee.cpp  EmployeeRoles.cpp  Permissions.cpp  PermissionsRoles.cpp  Product.cpp  PurchaseOrder.cpp  PurchaseOrderDetails.cpp  Roles.cpp  Sale.cpp  Supplier.cpp  Transaction.cpp
src/routes/: AuthenticationServiceRoutes.cpp  CategoryRoutes.cpp  CustomerRoutes.cpp  EmployeeRolesRoutes.cpp  EmployeeRoutes.cpp  ProductRoutes.cpp  PurchaseORderDetailsRoutes.cpp  PurchaseOrderRoutes.cpp  SaleRoutes.cpp  SupplierRoutes.cpp  TransactionRoutes.cpp
src/validation/: Validator.cpp
